# alioth-protocol

./: .gitignore  .prettierignore  Anchor.toml  QUICK_START.md  README.md
programs/alioth-amm/: Cargo.toml
programs/alioth-amm/src/: constants.rs  errors.rs  lib.rs
programs/alioth-amm/src/instructions/: add_liquidity.rs  admin.rs  farming.rs  flash_loan.rs  initialize_pool.rs  mod.rs  multi_hop.rs  remove_liquidity.rs  swap.rs
programs/alioth-amm/src/state/: farming.rs  flash_loan.rs  mod.rs  pool.rs
programs/alioth-amm/src/utils/: math.rs  mod.rs  oracle.rs
tests/: alioth-amm.ts
