[package]
name = "alioth-amm"
version = "0.1.0"
description = "Advanced Solana AMM with Oracle Integration, Flash Loans, and Farming"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alioth_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
init-if-needed = ["anchor-lang/init-if-needed"]
default = ["init-if-needed"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
pyth-sdk-solana = "0.10.0"
solana-program = "1.18.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"

